--- a/.github/workflows/loms.yml
+++ b/.github/workflows/loms.yml
@@ -10,6 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: loms
+
     services:
       postgres:
         image: postgres:15
