--- a/.github/workflows/loms.yml
+++ b/.github/workflows/loms.yml
@@ -31,8 +31,8 @@ jobs:
     env:
       BINDIR: bin
       PACKAGE: ./cmd/app
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
       POSTGRES_DB: loms
       POSTGRES_PORT: 5432
 
