--- a/.github/workflows/loms.yml
+++ b/.github/workflows/loms.yml
@@ -19,8 +19,8 @@ jobs:
         image: postgres:15
         ports: ["5432:5432"]
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
           POSTGRES_DB: loms
         options: >-
           --health-cmd="pg_isready -U postgres"
