Fix package name

--- a/loms/.env
+++ b/loms/.env
@@ -2,7 +2,8 @@
 CURDIR="$(shell pwd)"
 BINDIR="${CURDIR}/bin"
 
-PACKAGE=devopsCourse/loms/cmd/app
+#PACKAGE=devopsCourse/loms/cmd/app
+PACKAGE=cmd/app
 
 # postgres
 POSTGRES_DB="loms"
