--- a/loms/Makefile
+++ b/loms/Makefile
@@ -5,7 +5,7 @@ bin-dir:
 
 build: bin-dir
 	#go build -o ${BINDIR}/app ${PACKAGE}
-	go build -o ${BINDIR}/app ${BINDIR}/${PACKAGE}
+	go build -o ${BINDIR}/app ${CURDIR}/${PACKAGE}
 
 install-grpc-deps: bin-dir
 	test -f ${BINDIR}/protoc-gen-go || \
