--- a/.github/workflows/loms-client.yml
+++ b/.github/workflows/loms-client.yml
@@ -7,26 +7,31 @@ on:
     branches: [main]
 
 jobs:
-  build-test:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
+          cache-dependency-path: loms-client/package-lock.json
 
       - name: Install dependencies
         run: npm ci
         working-directory: loms-client
 
-      - name: Run tests
-        run: npm test -- --watchAll=false
-        working-directory: loms-client
-
       - name: Build
         run: npm run build
+        working-directory: loms-client
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Run tests
+        run: npm test -- --watchAll=false
         working-directory: loms-client
