--- a/.github/workflows/loms.yml
+++ b/.github/workflows/loms.yml
@@ -9,62 +9,37 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: loms
-
-    services:
-      postgres:
-        image: postgres:15
-        ports: ["5432:5432"]
-        env:
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: loms
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
-    env:
-      BINDIR: bin
-      PACKAGE: ./cmd/app
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: loms
-      POSTGRES_PORT: 5432
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
           go-version: "1.22"
 
       - name: Install protoc
         run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
 
-      - name: Install Go dependencies
-        run: go mod tidy
-
-      - name: Generate gRPC code
+      - name: Generate code
         run: make generate-grpc
+
+      - name: Build
+        run: |
+          go mod tidy
+          make build
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"
 
       - name: Install minimock
         run: make install-minimock
 
-      - name: Run go generate (mocks, etc.)
+      - name: Generate code
         run: make go-generate
-
-      - name: Run migrations
-        run: make migration-up
-
-      - name: Build project
-        run: make build
 
       - name: Run tests
         run: go test ./... -v
