Fix ci pipelines: add working dir (lab_01)

--- a/.github/workflows/loms.yml
+++ b/.github/workflows/loms.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: loms
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
@@ -28,6 +31,9 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: loms
     needs: build
     steps:
       - uses: actions/checkout@v4
