--- a/.github/workflows/loms-client.yml
+++ b/.github/workflows/loms-client.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: loms-client
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -22,16 +25,16 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        working-directory: loms-client
 
       - name: Build
         run: npm run build
-        working-directory: loms-client
 
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: loms-client
     needs: build
     steps:
       - name: Run tests
         run: npm test -- --watchAll=false
-        working-directory: loms-client
