--- a/.github/workflows/loms.yml
+++ b/.github/workflows/loms.yml
@@ -29,6 +29,13 @@ jobs:
           go mod tidy
           make build
 
+      - name: Upload generated code
+        uses: actions/upload-artifact@v4
+        with:
+          name: generated-grpc-code
+          path: loms/pkg/loms_v1/
+
+
   test:
     runs-on: ubuntu-latest
     defaults:
@@ -40,6 +47,12 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: "1.22"
+
+      - name: Download generated code
+        uses: actions/download-artifact@v4
+        with:
+          name: generated-grpc-code
+          path: loms/pkg/loms_v1/
 
       - name: Install minimock
         run: make install-minimock
