--- a/.github/workflows/loms-client.yml
+++ b/.github/workflows/loms-client.yml
@@ -13,11 +13,8 @@ jobs:
       run:
         working-directory: loms-client
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
@@ -29,6 +26,13 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Upload Workspace
+        uses: actions/upload-artifact@v4
+        with:
+          name: project-dist
+          path: loms-client/
+
+
   test:
     runs-on: ubuntu-latest
     defaults:
@@ -36,5 +40,11 @@ jobs:
         working-directory: loms-client
     needs: build
     steps:
+      - name: Download Workspace
+        uses: actions/download-artifact@v4
+        with:
+          name: project-dist
+          path: loms-client/
+
       - name: Run tests
         run: npm test -- --watchAll=false
