--- a/.github/workflows/loms-client.yml
+++ b/.github/workflows/loms-client.yml
@@ -26,25 +26,22 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Upload Workspace
-        uses: actions/upload-artifact@v4
-        with:
-          name: project-dist
-          path: loms-client/
-
-
   test:
     runs-on: ubuntu-latest
+    needs: build
     defaults:
       run:
         working-directory: loms-client
-    needs: build
     steps:
-      - name: Download Workspace
-        uses: actions/download-artifact@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          name: project-dist
-          path: loms-client/
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: loms-client/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run tests
         run: npm test -- --watchAll=false
